made changes to newuser.sh